--- a/avatar/package.json
+++ b/avatar/package.json
@@ -18,6 +18,7 @@
     "react-imask": "^6.4.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
